syntax = 'proto3';

package calculator;

option java_package = "dev.dimuziop.calculator";
option java_multiple_files = true;

message Sum {
  int32 a = 1;
  int32 b = 2;
}

message IntegerMonomial {
  int32 a = 1;
}

message SumRequest {
  Sum command = 1;
}

message SumResponse {
  int32 response = 1;
}

message PrimeNumberDecompositionRequest {
  IntegerMonomial a = 1;
}

message PrimeNumberDecompositionResponse {
  int32 response = 1;
}

service CalculatorService {
  //unary
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}